[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "host-ids"
version = "0.1.0"
description = "IDS baseado em host (Linux): monitora processos, conexões, usuários e integridade de arquivos."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Diogo Damasceno", email = "mitszukyo@gmail.com" }]
keywords = ["security", "ids", "hids", "monitoring", "cybersecurity"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
hostids = "hostids.cli:main"

[tool.setuptools.packages.find]
include = ["hostids*"]
